--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start -p 8080",
     "lint": "next lint",
+    "prettier": "prettier --write .",
     "db:generate": "yarn drizzle-kit generate",
     "db:migrate": "yarn drizzle-kit migrate",
     "db:seed": "yarn drizzle-kit seed",
@@ -40,7 +41,7 @@
     "@sparticuz/chromium": "^123.0.0",
     "@sparticuz/chromium-min": "^123.0.0",
     "@tanstack/react-table": "^8.19.3",
-    "bcrypt": "^5.1.1",
+    "bcrypt": "latest",
     "canvas": "^2.11.2",
     "chart": "^0.1.2",
     "class-variance-authority": "^0.7.0",
