--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "lib": ["dom", "dom.iterable", "esnext",  "webworker"],
+    "lib": ["dom", "dom.iterable", "esnext", "webworker"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -20,10 +20,8 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "types": [
-      "@serwist/next/typings"
-    ],
+    "types": ["@serwist/next/typings"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules" , "public/sw.js"]
+  "exclude": ["node_modules", "public/sw.js"]
 }
