--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "@sparticuz/chromium": "^123.0.0",
     "@sparticuz/chromium-min": "^123.0.0",
     "@tanstack/react-table": "^8.19.3",
-    "bcrypt": "latest",
+    "bcrypt": "^5.1.1",
     "canvas": "^2.11.2",
     "chart": "^0.1.2",
     "class-variance-authority": "^0.7.0",
